--- a/OneDrive/Desktop/nextv/package.json
+++ b/OneDrive/Desktop/nextv/package.json
@@ -2,6 +2,8 @@
   "name": "nextv",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jayraj175coder.github.io/nextv/",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.12.3",
+    "gh-pages": "^6.1.1",
     "puppeteer": "^22.12.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -26,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
